dodalem interfejs graficzny i obsluge move i start